--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "indent": ["error", 2],
     "react/jsx-props-no-spreading": 0,
     "import/no-extraneous-dependencies": 0,
-    "react/button-has-type": 0
+    "react/button-has-type": 0,
+    "jsx-a11y/anchor-is-valid": 0
   }
 }
