--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "react/jsx-props-no-spreading": 0,
     "import/no-extraneous-dependencies": 0,
     "react/button-has-type": 0,
-    "jsx-a11y/anchor-is-valid": 0
+    "jsx-a11y/anchor-is-valid": 0,
+    "react/forbid-prop-types": 0,
   }
 }
