--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,6 @@
     "import/no-extraneous-dependencies": 0,
     "react/button-has-type": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "react/forbid-prop-types": 0,
+    "react/forbid-prop-types": 0
   }
 }
