--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
@@ -39,10 +40,10 @@
     "@babel/core": "^7.12.13",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-controls": "^6.1.17",
-    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.17",
     "@storybook/addon-viewport": "^6.1.17",
-    "@storybook/react": "^6.1.17",
+    "@storybook/react": "^6.1.21",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
