main navigation in header is working

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     }
   },
   "env": {
+    "browser": true,
     "node": true // defines things like process.env when generating through node
   },
   "extends": [
