add node-sass as package

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-contentful": "^4.6.3",
     "gatsby-transformer-sharp": "^2.12.1",
+    "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.2.1"
